--- a/src/Components/Snake/Snake.module.css
+++ b/src/Components/Snake/Snake.module.css
@@ -2,7 +2,7 @@
     position: absolute;
     width: 2%;
     height: 2%;
-    background-color: black;
+    background-color: greenyellow;
     border: 1px solid white;
     border-radius: 40%;
 }
